# todoofus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
assets/: index.html  index.js  manifest.json  service-worker.js  styles.css
migrations/: 01_init.down.sql  01_init.up.sql  02_add_completed_at.down.sql  02_add_completed_at.up.sql
src/: db.rs  errors.rs  main.rs  routes.rs  todos.rs
