[package]
name = "todoofus"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = { version = "0.8.4", features = ["macros", "tracing"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
